[package]
name = "threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
crossbeam-channel = "0.5"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"